WIP install all for 6.0
