# controllers/update_switch/update_switch.go
@@ -15,10 +15,11 @@ import (
 
 // UpdateSwitch is a struct for the http objects
 type UpdateSwitch struct {
-	Request     *http.Request
-	Client      switch_operations.ISwitch
-	SwitchModel string
-	ImageURL    string
+	Request     	*http.Request
+	Client      	switch_operations.ISwitch
+	SwitchModel	 	string
+	FirmwareImages	[]*models.FirmwareImage
+
 }
 
 // MiddleWare handles the route call
@@ -39,7 +40,7 @@ func MiddleWare(r *http.Request, body *models.UpdateSwitch) middleware.Responder
 		Request:     r,
 		Client:      client,
 		SwitchModel: *body.SwitchModel,
-		ImageURL:    *body.ImageURL,
+		FirmwareImages :    body.FirmwareImages,
 	}
 }
 
@@ -58,7 +59,7 @@ func (c *UpdateSwitch) notSupported(rw http.ResponseWriter, rp runtime.Producer)
 }
 
 func (c *UpdateSwitch) postUpdateSwitch(rw http.ResponseWriter, rp runtime.Producer) {
-	err := c.Client.Update(c.SwitchModel, c.ImageURL)
+	err := c.Client.Update(c.SwitchModel, c.FirmwareImages)
 
  	if err != nil {
  		rw.WriteHeader(400)
